<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/gradiantheader">

        <TextView
            android:id="@+id/txt_CustomAlert_Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:padding="10dp"
            android:text="@string/strAlertTitle"
            android:textColor="@color/white"
            android:textSize="@dimen/text_head"
           />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_CustomAlert_Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:layout_gravity="center"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"

        android:text="@string/strAlertTitle"
        android:textColor="@color/black"
        android:textSize="16dp"
        />

    <LinearLayout
        android:id="@+id/linearLayout_CustomAlert_YesNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:background="@color/light_gray">

            <TextView
                android:id="@+id/txt_CustomAlert_No"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/strAlert_No"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/txt_CustomAlert_Yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/strAlert_Yes"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_CustomAlert_OK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradiantheader"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/txt_CustomAlert_OK"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>