<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="@color/white"
        android:elevation="3dp"

        >

        <ImageView
            android:id="@+id/back_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:src="@mipmap/arrowblue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_60"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/confirmation"
            android:textColor="@color/activecolor"
            android:textSize="@dimen/text_head" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearbtn"
        android:layout_below="@+id/appbar"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="10dp"

        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/alarmdetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"

            android:elevation="3dp"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">


            <ImageView
                android:id="@+id/img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:src="@mipmap/success" />


            <TextView
                android:id="@+id/successmsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:letterSpacing="0.05"
                android:text="@string/succestext"
                android:textColor="@color/gray_dark"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/ticketid"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/dp_14" />

                <TextView
                    android:id="@+id/input_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="24"
                    android:maxLines="1"
                    android:text=""
                    android:textColor="@color/textcolor"
                    android:textSize="14dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/approvestatusmsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/status"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/dp_14" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="Waiting for approval"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/dp_14"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearbtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:elevation="3dp">

        <Button
            android:id="@+id/btnsubmit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/textgoto"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </LinearLayout>

</RelativeLayout>