<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="@color/white">

        <ImageView
            android:id="@+id/back_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:src="@mipmap/arrowblue" />

        <TextView
            android:id="@+id/cartnav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="@dimen/dp_30"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:text="@string/pmhistory"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_head" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/very_light_gray"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="4">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"

                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttonborder"
                        android:gravity="center"

                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/open"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dp_15" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttonborder"

                        android:gravity="center"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/closed"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dp_15" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttonborder"
                        android:gravity="center"

                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/overdue"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dp_15" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttonborder"
                        android:gravity="center"

                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/approval"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dp_15" />

                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:weightSum="4">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/square"
                            android:orientation="horizontal"

                            >

                            <RelativeLayout
                                android:id="@+id/frag_home_search_layout"
                                android:layout_width="180dp"
                                android:layout_height="wrap_content"
                                android:focusableInTouchMode="true"

                                >

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="50dp">


                                    <ImageView
                                        android:id="@+id/frag_home_heart_icon"
                                        android:layout_width="@dimen/dp_25"
                                        android:layout_height="@dimen/dp_25"
                                        android:layout_centerVertical="true"
                                        android:layout_marginLeft="@dimen/dp_5"
                                        android:src="@mipmap/search" />


                                    <EditText
                                        android:id="@+id/frag_home_search_autocomplete"
                                        android:layout_width="match_parent"
                                        android:layout_height="@dimen/dp_50"
                                        android:layout_marginLeft="@dimen/dp_5"
                                        android:layout_toRightOf="@+id/frag_home_heart_icon"
                                        android:background="@null"
                                        android:ellipsize="end"
                                        android:focusableInTouchMode="true"
                                        android:focusedByDefault="false"
                                        android:gravity="center"
                                        android:hint="Search by site id"
                                        android:maxLines="1"
                                        android:singleLine="false"
                                        android:textColor="@color/black"
                                        android:textColorHint="@color/gray"
                                        android:textSize="@dimen/dp_14" />
                                </RelativeLayout>


                            </RelativeLayout>

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="@dimen/dp_5"
                                android:background="#bdbdbd" />

                            <RelativeLayout
                                android:id="@+id/spinnerlayout"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_gravity="right"
                                android:orientation="horizontal">

                                <Spinner
                                    android:id="@+id/sort_button"
                                    android:layout_width="wrap_content"
                                    android:layout_height="50dp"
                                    android:layout_alignParentRight="true"
                                    android:layout_centerVertical="true"
                                    android:layout_marginLeft="5dp"
                                    android:inputType="textPersonName|textCapWords"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/black" />


                            </RelativeLayout>
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/r1"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@color/white">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_20"
                    android:scrollbars="vertical" />


            </RelativeLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>